stable mobile app ui changes
